@@ -1,3 +1,10 @@
+2009-03-17  Jesús Barbero Rodríguez <chuchiperriman@gmail.com>
+
+	* gsc-trigger-members.c:
+	Filter the content when the user write
+	* general:
+	Better calltips control
+
 2009-03-15  Jesús Barbero Rodríguez <chuchiperriman@gmail.com>
 
 	* all:
